--- a/templates/cours/index.html.twig
+++ b/templates/cours/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CoursController!{% endblock %}
+{% block title %}Hello EleveController!{% endblock %}
 
 {% block body %}
 <style>
@@ -13,8 +13,8 @@
 
     This friendly message is coming from:
     <ul>
-        <li>Your controller at <code>D:/Xampp/htdocs/24LILIAN31/src/Controller/CoursController.php</code></li>
-        <li>Your template at <code>D:/Xampp/htdocs/24LILIAN31/templates/cours/index.html.twig</code></li>
+        <li>Your controller at <code>D:/Xampp/htdocs/webstudent/src/Controller/EleveController.php</code></li>
+        <li>Your template at <code>D:/Xampp/htdocs/webstudent/templates/eleve/index.html.twig</code></li>
     </ul>
 </div>
 {% endblock %}
