--- a/templates/professeur/index.html.twig
+++ b/templates/professeur/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ProfesseurController!{% endblock %}
+{% block title %}Hello EtudiantController!{% endblock %}
 
 {% block body %}
 <style>
@@ -13,8 +13,8 @@
 
     This friendly message is coming from:
     <ul>
-        <li>Your controller at <code>D:/Xampp/htdocs/24LILIAN31/src/Controller/ProfesseurController.php</code></li>
-        <li>Your template at <code>D:/Xampp/htdocs/24LILIAN31/templates/professeur/index.html.twig</code></li>
+        <li>Your controller at <code>D:/Xampp/htdocs/webstudent/src/Controller/EtudiantController.php</code></li>
+        <li>Your template at <code>D:/Xampp/htdocs/webstudent/templates/etudiant/index.html.twig</code></li>
     </ul>
 </div>
 {% endblock %}
