--- a/templates/cours/ajouter.html.twig
+++ b/templates/cours/ajouter.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ajouter un Élève{% endblock %}
+{% block title %}Ajouter un Cours{% endblock %}
 
 {% block body %}
     <h1>Ajouter un Élève</h1>
