--- a/templates/cours/consulter.html.twig
+++ b/templates/cours/consulter.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Consultation de l'Élève{% endblock %}
 
 {% block body %}
-    <h5>PAGE DE CONSULTATION D'UN ÉLÈVE</h5>
+    <h5>PAGE DE CONSULTATION D'UN COURS</h5>
     <p>
     <table>
         <tr>
