--- a/templates/eleve/lister.html.twig
+++ b/templates/eleve/lister.html.twig
@@ -1,27 +1,2 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-		
-		LISTE DES ETUDIANTS</br>
-		<table>
-		{% for e in eEleves %}
-		<tr>
-			<td><a href="{{ path('eleveConsulter', { 'id': e.id }) }}">{{ e.nom }}</a></td>
-			<td>{{ e.prenom }}</a></td>
-	{% else %}
-		<tr>
-		<td>Aucun eleve n'a été trouvé.</td>
-		</tr>
-	{% endfor %}
-	
-</table>
-	<a href="{{ path('eleveAjouter')}}"> Ajouter un eleve </a>
-    </body>
-</html>
+{% extends 'base.html.twig' %}
+
